--- a/code/version 2.0/src/index.html
+++ b/code/version 2.0/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stock App</title>
+    <title>Yoghismo App</title>
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,14 +27,14 @@
         </div>
     -->
     <div class="main-content">
-    <div class="header">
-        <!--
+        <div class="header">
+            <!--
         <button id="drawerButton" class="header__button">
             <img class="header_button_img" src="assets/hamburger_logo.png" alt="menu">
         </button>
         -->
-        <img class="header__logo" src="assets/logoAIYY.png" alt="Logo Asociación Internacional de Yoga Yoguismo">
-    </div>
+            <img class="header__logo" src="assets/logoAIYY.png" alt="Logo Asociación Internacional de Yoga Yoguismo">
+        </div>
 
         <div class="inputContainer">
             <form id="postureForm" class="postureFormContainer">
@@ -45,38 +45,60 @@
             </form>
         </div>
 
-        <div class="SanskritTranslation">
-            <div class="sanskritTranslation__title">
-                <h2>Sánscrito</h2>
-            </div>
-            <div class="description__text" id="SanskritTranslationResult">-</div>
-            <div class="sanskritTranslation__title">
-                <h2>Morfemas</h2>
-            </div>
+        <main>
+            <section class="main__left">
+                <div class="sanskritTranslation">
+                    <div class="sanskritTranslation__title">
+                        <h2>Sánscrito</h2>
+                    </div>
+                    <div class="description__text" id="SanskritTranslationResult">-</div>
+                    <div class="sanskritTranslation__title">
+                        <h2>Morfemas</h2>
+                    </div>
 
-            <table class="morphemesTable" id="morphemesTable">
-                <thead>
-                    <tr>
+                    <table class="morphemesTable" id="morphemesTable">
+                        <thead>
+                            <tr>
 
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
-        <div class="EnlishSpanishContainer">
-            <div class="TranslationContainer">
-                <h2>English</h2>
-                <div id="EnglishTranslationResult" class="TranslationContainer__result">-</div>
-            </div>
-            <div class="TranslationContainer">
-                <h2>Español</h2>
-                <div id="SpanishTranslationResult" class="TranslationContainer__result">-</div>
-            </div>
-        </div>
+                <div class="enlishSpanishContainer">
+                    <div class="translationContainer">
+                        <h2>English</h2>
+                        <div id="EnglishTranslationResult" class="translationContainer__result">-</div>
+                    </div>
+                    <div class="translationContainer">
+                        <h2>Español</h2>
+                        <div id="SpanishTranslationResult" class="translationContainer__result">-</div>
+                    </div>
+                </div>
+
+            </section>
+            <section class="main__right">
+                <div class="posturePicture">
+                    <div class="posturePicture__i">
+                        <i class="fa-solid fa-image" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="posturePicture__imgContainer">
+                        <img id="PosturePicture"  class="posturePicture__img"  alt="Imagen de la postura">
+                    </div>
+                </div>
+                <div class="postureVideo">
+                    <div class="postureVideo__i">
+                        <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                    </div>
+                    <div id="PostureVideo" class="postureVideo__videoContainer">
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 
