feat: sweetAlert added, error message improved and related searches

--- a/code/version 2.0/src/index.html
+++ b/code/version 2.0/src/index.html
@@ -45,8 +45,8 @@
             </form>
         </div>
 
-        <main>
-            <section class="main__left">
+        <main id="MainSection">
+            <section id="MainLeft" class="main__left">
                 <div class="sanskritTranslation">
                     <div class="sanskritTranslation__title">
                         <h2>Sánscrito</h2>
@@ -81,10 +81,10 @@
                 </div>
 
             </section>
-            <section class="main__right">
+            <section id="MainRight" class="main__right">
                 <div class="posturePicture">
                     <div class="posturePicture__i">
-                        <i class="fa-solid fa-image" style="color: #ffffff;"></i>
+                        <i class="fa-solid fa-image fa-xl" style="color: #ffffff;"></i>
                     </div>
                     <div class="posturePicture__imgContainer">
                         <img id="PosturePicture"  class="posturePicture__img"  alt="Imagen de la postura">
@@ -92,12 +92,13 @@
                 </div>
                 <div class="postureVideo">
                     <div class="postureVideo__i">
-                        <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+                        <i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i>
                     </div>
                     <div id="PostureVideo" class="postureVideo__videoContainer">
                     </div>
                 </div>
             </section>
+
         </main>
     </div>
 </body>
