feat: trim, required and cleanFields, validate URL

--- a/code/version 3.0/index.html
+++ b/code/version 3.0/index.html
@@ -82,8 +82,8 @@
                 </div>
                 
                 <label for="video">Video</label>
-                <p>Carga el link embebido del video que muestre cómo hacer la postura </p>
-                <input type="text" id="poseInputVideo" name="video" placeholder="https://www.youtube.com/embed/FEH3YU02bDo?si=WFB_qnCQiVhA3ATb">
+                <p>Carga el link de un video que muestre cómo hacer la postura </p>
+                <input type="text" id="poseInputVideo" name="video" placeholder="https://www.youtube.com/FEH3YU02bDo?si=WFB_qnCQiVhA3ATb">
 
                 <button type="submit" class="submit-button" id="submitPoseButton">Aceptar</button>
             </form>
